<resources>
    <string name="app_name">Location_Pinned</string>
    <string name="query_location">Query Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enter_address_to_query">Enter Address to Query</string>
    <string name="add_location">Add Location</string>
    <string name="delete_location">Delete Location</string>
    <string name="update_location">Update Location</string>
    <string name="geolocator">Geolocator</string>
    <string name="address">Address</string>
</resources>