<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#FFC107"
        android:gravity="center"
        android:text="@string/geolocator"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/address"
        android:inputType="text" />

    <EditText
        android:id="@+id/latitudeInput"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/latitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/longitudeInput"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/longitude"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#4CAF50"
        android:onClick="addLocationToDatabase"
        android:text="@string/add_location" />

    <EditText
        android:id="@+id/locationIdInput"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:hint="Location ID"
        android:inputType="number" />

    <Button
        android:id="@+id/deleteLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#FF3232"
        android:text="@string/delete_location" />

    <EditText
        android:id="@+id/updateLocationIdInput"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:hint="Location ID"
        android:inputType="number" />

    <EditText
        android:id="@+id/newAddressInput"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:hint="New Address" />

    <EditText
        android:id="@+id/newLatitudeInput"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:hint="New Latitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/newLongitudeInput"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:hint="New Longitude"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/updateLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/update_location" />


    <EditText
        android:id="@+id/addressQuery"
        android:layout_width="378dp"
        android:layout_height="58dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_address_to_query" />

    <Button
        android:id="@+id/queryLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#E91E63"
        android:text="@string/query_location" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locationRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>

</ScrollView>

